--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,12 @@
 
 	<!-- Link to main(custom) stylesheet -->
 	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Audiowide|Monoton" rel="stylesheet">
 </head>
 <body>
 
 	<!-- Create navbar -->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="/">FestHub</a>
@@ -48,4 +49,3 @@
 			</div>
 		<% } %>
 	</div>
-	
