--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -3,6 +3,7 @@ body {
 }
 
 #landing-header {
+	font-family: 'Audiowide', cursive;
 	z-index: 1;
 	position: relative;
 	text-align: center;
@@ -10,7 +11,34 @@ body {
 }
 
 #landing-header h1 {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: black;
+	font-size: 50px;
+	border-bottom: 5px double rgb(74, 58, 58);
+	border-top: 5px double rgb(74, 58, 58);
   color: #fff;
+}
+
+.btn-success {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-success:hover {
+	color: black;
+	background-color: white;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-success:active, .open>.dropdown-toggle.btn-success {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-success:active:focus {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
 }
 
 .slideshow {
@@ -49,7 +77,7 @@ body {
 
 /*Background images*/
 .slideshow li:nth-child(1) {
-  background-image: url(https://images.unsplash.com/photo-1507874457470-272b3c8d8ee2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bbaaf356e5f8bb5623631bf7f5f37b91&auto=format&fit=crop&w=500&q=60) 
+  background-image: url(https://images.unsplash.com/photo-1507874457470-272b3c8d8ee2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bbaaf356e5f8bb5623631bf7f5f37b91&auto=format&fit=crop&w=500&q=60)
 }
 .slideshow li:nth-child(2) {
   background-image: url(https://images.unsplash.com/photo-1514090743643-37a03f8a7272?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=64325d6184f461385e117428f6b5ee0c&auto=format&fit=crop&w=500&q=60);
