--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,55 @@
+body {
+	font-family: 'Audiowide', cursive;
+	background-color:black;
+	background:
+	radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.15) 30%, rgba(255,255,255,.3) 32%, rgba(255,255,255,0) 33%) 0 0,
+	radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.1) 11%, rgba(255,255,255,.3) 13%, rgba(255,255,255,0) 14%) 0 0,
+	radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.2) 17%, rgba(255,255,255,.43) 19%, rgba(255,255,255,0) 20%) 0 110px,
+	radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.2) 11%, rgba(255,255,255,.4) 13%, rgba(255,255,255,0) 14%) -130px -170px,
+	radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.2) 11%, rgba(255,255,255,.4) 13%, rgba(255,255,255,0) 14%) 130px 370px,
+	radial-gradient(rgba(255,255,255,0) 0, rgba(255,255,255,.1) 11%, rgba(255,255,255,.2) 13%, rgba(255,255,255,0) 14%) 0 0,
+	linear-gradient(45deg, #343702 0%, #184500 20%, #187546 30%, #006782 40%, #0b1284 50%, #760ea1 60%, #83096e 70%, #840b2a 80%, #b13e12 90%, #e27412 100%);
+	background-size: 470px 470px, 970px 970px, 410px 410px, 610px 610px, 530px 530px, 730px 730px, 100% 100%;
+	background-color: #840b2a;
+}
+
+.btn-primary {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-primary:hover {
+	color: black;
+	background-color: white;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-primary:active, .open>.dropdown-toggle.btn-success {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-primary:active:focus {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.login {
+	color: white;
+	text-align: center;
+	padding-top: 10%;
+}
+
+input[type=submit] {
+	color: black;
+	background-color: white;
+	border: 5px double rgb(74, 58, 58);
+}
+
+a {
+	color: black;
+}
+
 .thumbnail img {
 	width: 100%;
 	/*max-height: 500px;*/
@@ -13,4 +65,50 @@
 
 .delete-form {
 	display: inline;
+}
+
+.btn-success {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-success:hover {
+	color: black;
+	background-color: white;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-success:active, .open>.dropdown-toggle.btn-success {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-success:active:focus {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+h1 {
+	color: black;
+}
+
+.btn-warning {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-warning:hover {
+	color: black;
+	background-color: white;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-warning:active, .open>.dropdown-toggle.btn-warning {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
+}
+
+.btn-warning:active:focus {
+	background-color: black;
+	border: 5px double rgb(74, 58, 58);
 }
