--- a/views/festivals/show.ejs
+++ b/views/festivals/show.ejs
@@ -9,9 +9,9 @@
 			<p class="lead">FestHub</p>
 			<!-- Add some placeholder data -->
 			<div class="list-group">
-				<li class="list-group-item active">Info 1</li>
-				<li class="list-group-item">Info 2</li>
-				<li class="list-group-item">Info 3</li>
+				<li class="list-group-item active">This is</li>
+				<li class="list-group-item">Placeholder</li>
+				<li class="list-group-item">Text</li>
 			</div>
 		</div>
 		<!-- Create main area of page -->
