--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,11 +4,12 @@
         <title>FestHub</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
+        <link href="https://fonts.googleapis.com/css?family=Audiowide|Monoton" rel="stylesheet">
         <!-- Do stuff depending on browser version, makes page more cross-browser compatible -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
     </head>
     <body>
-    
+
     <div class="container">
         <% if(error && error.length > 0){ %>
             <div class="alert alert-danger" role="alert">
@@ -21,12 +22,12 @@
             </div>
         <% } %>
     </div>
-    
+
     <div id="landing-header">
  		<h1>Welcome to FestHub!</h1>
 		<a href="/festivals" class="btn btn-lg btn-success">View All Festivals</a>
     </div>
-    
+
     <!-- Backgrounds attached to list items as they have to be attached to a html element -->
     <ul class="slideshow">
       <li></li>
