--- a/views/festivals/index.ejs
+++ b/views/festivals/index.ejs
@@ -8,7 +8,7 @@
 			<p>View festivals around the world</p>
 			<p>
 				<!-- Link to add a festival -->
-				<a class="btn btn-primary btn-lg" href="/festivals/new">Add A New Festival</a>
+				<a class="btn btn-black btn-lg" href="/festivals/new">Add A New Festival</a>
 			</p>
 		</div>
 	</header>
@@ -26,7 +26,7 @@
 						<h4><%= festival.name%></h4>
 					</div>
 					<p>
-						<a href="/festivals/<%= festival._id %>" class="btn btn-primary">More Info</a>
+						<a href="/festivals/<%= festival._id %>" class="btn btn-black">More Info</a>
 					</p>
 				</div>
 			</div>
