--- a/views/festivals/new.ejs
+++ b/views/festivals/new.ejs
@@ -20,7 +20,7 @@
 					<input class="form-control" type="number" name="price" placeholder="Price" min="0.01" step="0.01">
 				</div>
 				<div class="form-group">
-					<button class="btn btn-primary btn-lg btn-block">Submit</button>
+					<button class="btn btn-black btn-lg btn-block">Submit</button>
 				</div>
 			</form>
 			<!-- Link to festivals page -->
