--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -25,7 +25,7 @@
 
     <div id="landing-header">
  		<h1>Welcome to FestHub!</h1>
-		<a href="/festivals" class="btn btn-lg btn-success">View All Festivals</a>
+		<a href="/festivals" class="btn btn-lg btn-black">View All Festivals</a>
     </div>
 
     <!-- Backgrounds attached to list items as they have to be attached to a html element -->
